lab_03 | fix bugs with conferences
